fix: [CDNG-9176]: Handling very long url overflows (#3665)
* fix: [CDNG-9176]: handling overflow for very long urls

* fix: [CDNG-9176]: using native <a> instead of link tag

* fix: [CDNG-9176]: test update

* fix: [CDNG-9176]: minor fix

* fix: [CDNG-9176]: test update

--- a/src/modules/40-gitsync/pages/repos/GitSyncRepoTab.module.scss
+++ b/src/modules/40-gitsync/pages/repos/GitSyncRepoTab.module.scss
@@ -72,8 +72,14 @@
 
 .link {
   color: var(--primary) !important;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .noShadow {
   box-shadow: none !important;
+}
+
+.noOverflow {
+  overflow: hidden;
 }
